feat: implement modular architecture with custom error handling
- Add custom error types (StoolErrorType, StoolError, Result)
- Add YAML config loading for server management
- Refactor SSH module with proper error handling
- Add CLI framework using clap
- Add interactive utility using dialoguer
- Update dependencies (clap, serde, serde_yaml)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "stool"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [profile.release]
 opt-level = 3
@@ -14,3 +14,6 @@ panic = "abort"
 
 [dependencies]
 dialoguer = "0.12.0"
+clap = { version = "4.5", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9"
