refactor: restructure to workspace with layered crates
- Create workspace structure (stool-cli, stool-core, stool-modules, stool-utils)
- Move error and config to stool-core
- Move SSH module to stool-modules
- Move interactive utilities to stool-utils
- Update dependencies between crates
- Remove old src directory

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,23 @@
-[package]
-name = "stool"
+[workspace]
+members = [
+    "stool-cli",
+    "stool-core",
+    "stool-modules",
+    "stool-utils",
+]
+resolver = "2"
+
+[workspace.package]
 version = "0.1.0"
 edition = "2021"
+authors = ["seokjin0414 <sars21@hanmail.net>"]
+license = "MIT"
+
+[workspace.dependencies]
+clap = { version = "4.5", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9"
+dialoguer = "0.12.0"
 
 [profile.release]
 opt-level = 3
@@ -11,9 +27,3 @@ debug = false
 incremental = false
 strip = true
 panic = "abort"
-
-[dependencies]
-dialoguer = "0.12.0"
-clap = { version = "4.5", features = ["derive"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.9"
