feat: add filesystem operations with find and count commands
- Add filesystem module with find and count subcommands
- Support glob pattern, exact match, and partial search
- Add regex dependency for pattern matching

--- a/stool-modules/Cargo.toml
+++ b/stool-modules/Cargo.toml
@@ -8,3 +8,4 @@ license.workspace = true
 [dependencies]
 stool-core = { path = "../stool-core" }
 stool-utils = { path = "../stool-utils" }
+regex = "1"
