feat: add shell completion support
- Add clap_complete dependency for completion generation
- Implement completion subcommand (zsh, bash, fish, powershell)
- Auto-install zsh completion in install.sh
- Support custom config path in install.sh
- Update README with completion usage and setup

--- a/stool-cli/Cargo.toml
+++ b/stool-cli/Cargo.toml
@@ -13,3 +13,4 @@ path = "src/main.rs"
 stool-core = { path = "../stool-core" }
 stool-modules = { path = "../stool-modules" }
 clap = { workspace = true }
+clap_complete = { workspace = true }
