--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ license = "MIT"
 
 [workspace.dependencies]
 clap = { version = "4.5", features = ["derive"] }
+clap_complete = "4.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 dialoguer = "0.12.0"
