feat: add file path completion for transfer operations
Add interactive file path input with tab completion support using rustyline library. Local file paths in upload and download operations now support tab completion for improved usability.

--- a/stool-utils/Cargo.toml
+++ b/stool-utils/Cargo.toml
@@ -8,3 +8,4 @@ license.workspace = true
 [dependencies]
 stool-core = { path = "../stool-core" }
 dialoguer = { workspace = true }
+rustyline = { workspace = true }
