--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ clap_complete = "4.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 dialoguer = "0.12.0"
+rustyline = "14.0"
 
 [profile.release]
 opt-level = 3
