feat: add AWS ECR login functionality
- Add EcrRegistry struct to config for account_id and region
- Implement ecr_login with interactive registry selection
- Support YAML config and manual input for ECR registries
- Execute aws ecr get-login-password and docker login pipeline
- Add ecr subcommand to AWS CLI wrapper

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -18,3 +18,12 @@ servers:
     ip: "ec2-123-45-67-89.compute.amazonaws.com"
     user: "ec2-user"
     key_path: "~/.ssh/aws-key.pem"
+
+ecr_registries:
+ - name: "Production ECR"
+   account_id: "010928203580"
+   region: "ap-northeast-2"
+
+ - name: "Dev ECR"
+   account_id: "123456789012"
+   region: "us-east-1"
