refactor: add zeroize to clear sensitive data from memory

--- a/stool-modules/Cargo.toml
+++ b/stool-modules/Cargo.toml
@@ -9,3 +9,4 @@ license.workspace = true
 stool-core = { path = "../stool-core" }
 stool-utils = { path = "../stool-utils" }
 regex = "1"
+zeroize = { workspace = true }
