--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_yaml = "0.9.33"
 dialoguer = "0.12.0"
 rustyline = "17.0.2"
+zeroize = "1.8"
 
 [profile.release]
 opt-level = 3
