--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,13 @@ authors = ["seokjin0414 <sars21@hanmail.net>"]
 license = "MIT"
 
 [workspace.dependencies]
-clap = { version = "4.5.50", features = ["derive"] }
-clap_complete = "4.5.59"
-serde = { version = "1.0.228", features = ["derive"] }
-serde_yaml = "0.9.33"
-dialoguer = "0.12.0"
-rustyline = "17.0.2"
-zeroize = "1.8"
+clap = { version = "4.5.51", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
+clap_complete = { version = "4.5.60", default-features = false }
+serde = { version = "1.0.228", default-features = false, features = ["std", "derive"] }
+serde_yaml = { version = "0.9.33", default-features = false }
+dialoguer = { version = "0.12.0", default-features = false, features = ["completion"] }
+rustyline = { version = "17.0.2", default-features = false }
+zeroize = { version = "1.8.2", default-features = false, features = ["alloc"] }
 
 [profile.release]
 opt-level = 3
