--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ clap = { version = "4.5.51", default-features = false, features = ["std", "deriv
 clap_complete = { version = "4.5.60", default-features = false }
 serde = { version = "1.0.228", default-features = false, features = ["std", "derive"] }
 serde_yaml = { version = "0.9.33", default-features = false }
-dialoguer = { version = "0.12.0", default-features = false, features = ["completion"] }
+dialoguer = { version = "0.12.0", default-features = false, features = ["completion", "password"] }
 rustyline = { version = "17.0.2", default-features = false }
 zeroize = { version = "1.8.2", default-features = false, features = ["alloc"] }
 
