--- a/config.yaml.example
+++ b/config.yaml.example
@@ -21,9 +21,15 @@ servers:
 
 ecr_registries:
  - name: "Production ECR"
-   account_id: "010928203580"
+   account_id: "123456789013"
    region: "ap-northeast-2"
+   images:
+     - "my-app"
+     - "my-service"
 
  - name: "Dev ECR"
    account_id: "123456789012"
    region: "us-east-1"
+   images:
+     - "my-app"
+     - "my-service"
