feat: add YAML config support for SSO commands
- Add SsoConfig struct with name, start_url, region
- SSO configure uses expect to auto-fill values from config
- SSO login selects profile from config (name as profile)
- Add sso_configs example to config.yaml.example

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -33,3 +33,12 @@ ecr_registries:
    images:
      - "my-app"
      - "my-service"
+
+sso_configs:
+  - name: "my-sso-profile"
+    start_url: "https://my-company.awsapps.com/start"
+    region: "ap-northeast-2"
+
+  - name: "dev-sso-profile"
+    start_url: "https://my-company.awsapps.com/start"
+    region: "us-east-1"
