--- a/config.yaml.example
+++ b/config.yaml.example
@@ -23,6 +23,7 @@ ecr_registries:
  - name: "Production ECR"
    account_id: "123456789013"
    region: "ap-northeast-2"
+   sso_profile: "my-sso-profile"  # Optional: use SSO authentication
    images:
      - "my-app"
      - "my-service"
@@ -30,6 +31,7 @@ ecr_registries:
  - name: "Dev ECR"
    account_id: "123456789012"
    region: "us-east-1"
+   # No sso_profile - uses default aws configure credentials
    images:
      - "my-app"
      - "my-service"
